--- a/DBAChecksGUI/DBAChecksGUI.csproj
+++ b/DBAChecksGUI/DBAChecksGUI.csproj
@@ -381,6 +381,7 @@
     <None Include="Resources\AddComputedField_16x.png" />
     <None Include="Resources\AutoSum_16x.png" />
     <None Include="Resources\LineChart_16x.png" />
+    <None Include="Resources\112_RefreshArrow_Green_16x16_72.png" />
     <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="SqlServerTypes\x64\msvcr120.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
