Dac deployment from service config tool added
Generate script to upgrade db.

--- a/DBAChecksService/App.config
+++ b/DBAChecksService/App.config
@@ -49,6 +49,10 @@
         <assemblyIdentity name="DiffPlex" publicKeyToken="1d35e91d1bd7bc0f" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.6.3.0" newVersion="1.6.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.SqlServer.Types" publicKeyToken="89845dcd8080cc91" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-14.0.0.0" newVersion="14.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
