--- a/DBAChecksServiceConfig/packages.config
+++ b/DBAChecksServiceConfig/packages.config
@@ -9,6 +9,7 @@
   <package id="Microsoft.IdentityModel.Protocols" version="6.7.1" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.7.1" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="6.7.1" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.DacFx.x64" version="150.4826.1" targetFramework="net472" />
   <package id="Microsoft.SqlServer.Management.SqlParser" version="150.37051.0" targetFramework="net472" />
   <package id="Microsoft.SqlServer.SqlManagementObjects" version="160.2004021.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
