NuGet packages update

--- a/DBAChecksService/packages.config
+++ b/DBAChecksService/packages.config
@@ -1,18 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AWSSDK.Core" version="3.3.107.26" targetFramework="net472" />
-  <package id="AWSSDK.S3" version="3.3.111.28" targetFramework="net472" />
+  <package id="AWSSDK.Core" version="3.5.1.12" targetFramework="net472" />
+  <package id="AWSSDK.S3" version="3.5.1.3" targetFramework="net472" />
   <package id="Common.Logging" version="3.4.1" targetFramework="net472" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
-  <package id="Microsoft.Data.SqlClient.SNI" version="2.0.0" targetFramework="net472" />
+  <package id="Microsoft.Data.SqlClient" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.Data.SqlClient.SNI" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Identity.Client" version="4.18.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.7.1" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Logging" version="6.7.1" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Protocols" version="6.7.1" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.7.1" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="6.7.1" targetFramework="net472" />
-  <package id="Microsoft.SqlServer.Management.SqlParser" version="150.37051.0" targetFramework="net472" />
-  <package id="Microsoft.SqlServer.SqlManagementObjects" version="160.2004021.0" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Management.SqlParser" version="160.20216.14" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.SqlManagementObjects" version="161.41011.9" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Quartz" version="2.6.2" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
