--- a/DBAChecksService/packages.config
+++ b/DBAChecksService/packages.config
@@ -7,6 +7,7 @@
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.Data.SqlClient" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.Data.SqlClient.SNI" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.8" targetFramework="net472" />
   <package id="Microsoft.Identity.Client" version="4.18.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.7.1" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Logging" version="6.7.1" targetFramework="net472" />
@@ -16,9 +17,10 @@
   <package id="Microsoft.SqlServer.Management.SqlParser" version="160.20216.14" targetFramework="net472" />
   <package id="Microsoft.SqlServer.SqlManagementObjects" version="161.41011.9" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
-  <package id="Quartz" version="2.6.2" targetFramework="net472" />
+  <package id="Quartz" version="3.1.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Data.Common" version="4.3.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="6.7.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
@@ -27,5 +29,4 @@
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="Topshelf" version="4.2.1" targetFramework="net472" />
-  <package id="Topshelf.Quartz" version="0.4.0.1" targetFramework="net472" />
 </packages>
