--- a/DBAChecksGUI/DBAChecksGUI.csproj
+++ b/DBAChecksGUI/DBAChecksGUI.csproj
@@ -182,6 +182,12 @@
     <Compile Include="CustomProgressBar.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="DataRetention.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DataRetention.Designer.cs">
+      <DependentUpon>DataRetention.cs</DependentUpon>
+    </Compile>
     <Compile Include="DBAChecksStatus.cs" />
     <Compile Include="DBDiff.cs">
       <SubType>Form</SubType>
@@ -396,6 +402,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Changes\ConfigurationHistory.resx">
       <DependentUpon>ConfigurationHistory.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DataRetention.resx">
+      <DependentUpon>DataRetention.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DBDiff.resx">
       <DependentUpon>DBDiff.cs</DependentUpon>
