--- a/DBAChecksGUI/DBAChecksGUI.csproj
+++ b/DBAChecksGUI/DBAChecksGUI.csproj
@@ -172,6 +172,7 @@
     <Compile Include="CollectionDates\CollectionDatesThresholds.Designer.cs">
       <DependentUpon>CollectionDatesThresholds.cs</DependentUpon>
     </Compile>
+    <Compile Include="ColumnMetaData.cs" />
     <Compile Include="Common.cs" />
     <Compile Include="Changes\ConfigurationHistory.cs">
       <SubType>UserControl</SubType>
@@ -227,6 +228,18 @@
       <DependentUpon>DriveControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Drives\Drive.cs" />
+    <Compile Include="Drives\DriveHistory.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Drives\DriveHistory.Designer.cs">
+      <DependentUpon>DriveHistory.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Drives\DriveHistoryView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Drives\DriveHistoryView.Designer.cs">
+      <DependentUpon>DriveHistoryView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Drives\DriveThreshold.cs" />
     <Compile Include="Drives\DriveThresholdConfig.cs">
       <SubType>Form</SubType>
@@ -423,6 +436,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Drives\DriveControl.resx">
       <DependentUpon>DriveControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Drives\DriveHistory.resx">
+      <DependentUpon>DriveHistory.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Drives\DriveHistoryView.resx">
+      <DependentUpon>DriveHistoryView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Drives\DriveThresholdConfig.resx">
       <DependentUpon>DriveThresholdConfig.cs</DependentUpon>
