--- a/DBAChecksGUI/DBAChecksGUI.csproj
+++ b/DBAChecksGUI/DBAChecksGUI.csproj
@@ -202,6 +202,18 @@
     <Compile Include="DBFiles\DBFilesControl.Designer.cs">
       <DependentUpon>DBFilesControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="DBFiles\DBSpaceHistory.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="DBFiles\DBSpaceHistory.Designer.cs">
+      <DependentUpon>DBSpaceHistory.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DBFiles\DBSpaceHistoryView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DBFiles\DBSpaceHistoryView.Designer.cs">
+      <DependentUpon>DBSpaceHistoryView.cs</DependentUpon>
+    </Compile>
     <Compile Include="DBFiles\FileThreshold.cs" />
     <Compile Include="DBFiles\FileThresholdConfig.cs">
       <SubType>Form</SubType>
@@ -365,10 +377,10 @@
     <Compile Include="Changes\SQLPatching.Designer.cs">
       <DependentUpon>SQLPatching.cs</DependentUpon>
     </Compile>
-    <Compile Include="SpaceTracking.cs">
+    <Compile Include="DBFiles\SpaceTracking.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="SpaceTracking.Designer.cs">
+    <Compile Include="DBFiles\SpaceTracking.Designer.cs">
       <DependentUpon>SpaceTracking.cs</DependentUpon>
     </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
@@ -424,6 +436,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DBFiles\DBFilesControl.resx">
       <DependentUpon>DBFilesControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DBFiles\DBSpaceHistory.resx">
+      <DependentUpon>DBSpaceHistory.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DBFiles\DBSpaceHistoryView.resx">
+      <DependentUpon>DBSpaceHistoryView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DBFiles\FileThresholdConfig.resx">
       <DependentUpon>FileThresholdConfig.cs</DependentUpon>
@@ -513,7 +531,7 @@
     <EmbeddedResource Include="Changes\SQLPatching.resx">
       <DependentUpon>SQLPatching.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="SpaceTracking.resx">
+    <EmbeddedResource Include="DBFiles\SpaceTracking.resx">
       <DependentUpon>SpaceTracking.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Summary.resx">
