--- a/DBAChecksGUI/DBAChecksGUI.csproj
+++ b/DBAChecksGUI/DBAChecksGUI.csproj
@@ -148,6 +148,12 @@
     <Compile Include="Changes\Configuration.Designer.cs">
       <DependentUpon>Configuration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Changes\DBConfiguration.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Changes\DBConfiguration.Designer.cs">
+      <DependentUpon>DBConfiguration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Changes\Drivers.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -438,6 +444,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Changes\Configuration.resx">
       <DependentUpon>Configuration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Changes\DBConfiguration.resx">
+      <DependentUpon>DBConfiguration.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Changes\Drivers.resx">
       <DependentUpon>Drivers.cs</DependentUpon>
